fix(test): retain the frozen RIG-3B2B1 sources as fixtures instead of reading git
Three registered tests verified the legacy fixture's writer-commit sources by shelling
out to `git show <writer_commit>:<path>`. That commit is reachable from no branch and no
tag — it survived only as a dangling object held by reflog entries in one local object
store. So the tests already failed on every fresh clone and CI checkout, and they were
scheduled to start failing everywhere else too: unreachable reflog entries expire on
git's default 90-day schedule, after which a routine gc prunes the object and three
tests go red with no code change to explain it. Green that depends on one machine's
object store is not green.

The fix follows the convention already sitting in the same fixture directory, which has
retained a historical Java source as a tracked, hash-pinned .java.txt file since it was
authored — EXPORTER.java.txt. The two writer-commit sources now sit beside it as
STATE_SOURCE.java.txt and STORE_SOURCE.java.txt. Their bytes were extracted from the
writer commit while it was still readable and are byte-identical to it: they hash to the
c5e2330f/4e5294e1 values the provenance already pinned, which is what makes the retained
copy the historical blob rather than a re-creation of it.

No assertion was weakened. The same two pinned hashes still gate the content, now
recorded in three places (the test's expectations, PROVENANCE.tsv, SHA256SUMS), so a
substituted file cannot pass. writer_commit stays pinned as the historical record even
though nothing reads the object any more. verifyHistoricalSource gained a containment
guard, because the dangerous regression here is not a missing file but a retained path
re-aimed at the LIVE src/main source, which would silently verify present-day bytes as
"historical" and pass. A new mutation proof covers exactly that.

Mechanical consequences of adding two files to a fully-pinned tree: cardinality 37 -> 39
files and 36 -> 38 checksums, and LEGAC